--- a/BharaHobe/templates/app_rentApproval/add_product_rqsts.html
+++ b/BharaHobe/templates/app_rentApproval/add_product_rqsts.html
@@ -20,12 +20,12 @@
         <tbody>
             {% for rqst in requests %}
             <tr>
-                <td>{{ rqst.renter.username }}</td>
-                <td>{{ rqst.renter.email }}</td>
-                <td>{{ rqst.product.name }}</td>
-                <td>{{ rqst.product.description }}</td>
-                <td>{{ rqst.product.rental_price }}</td>
-                <td>{{ rqst.product.quantity_available }}</td>
+                <td>{{ rqst.m_renter.m_username }}</td>
+                <td>{{ rqst.m_renter.m_email }}</td>
+                <td>{{ rqst.m_product.m_name }}</td>
+                <td>{{ rqst.m_product.m_description }}</td>
+                <td>{{ rqst.m_product.m_rental_price }}</td>
+                <td>{{ rqst.m_product.m_quantity_available }}</td>
                 <td>
                     <form action="{% url 'approve_product' rqst.id %}" method="post" style="display: inline;">
                         {% csrf_token %}
