--- a/BharaHobe/templates/rentapp/admin_page.html
+++ b/BharaHobe/templates/rentapp/admin_page.html
@@ -7,18 +7,18 @@
 <body>
 
     <div class="row">
-        <div class="col-sm-6">
+        <!-- <div class="col-sm-6">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Review Product Adding Request</h5>
                     <p class="card-text">Product adding requests by Renter</p>
-                    <a href="{% url 'add_product_rqsts' %}" class="btn btn-primary">Pending Requests</a>
-                    <a href="{% url 'approved_requests' %}" class="btn btn-primary">Approved Requests</a>
-                    <a href="{% url 'disapproved_requests' %}" class="btn btn-primary">Disapproved Requests</a>
+                    <a href="#" class="btn btn-primary">Pending Requests</a>
+                    <a href="#" class="btn btn-primary">Approved Requests</a>
+                    <a href="#" class="btn btn-primary">Disapproved Requests</a>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-6">
+        </div> -->
+        <!-- <div class="col-sm-6">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Review Product Return Request</h5>
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
         <div class="col-sm-6">
             <div class="card">
                 <div class="card-body">
