created views for return requests

--- a/BharaHobe/templates/app_rentApproval/admin_page.html
+++ b/BharaHobe/templates/app_rentApproval/admin_page.html
@@ -22,7 +22,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Review Product Return Request</h5>
                     <p class="card-text">Product Return requests by Rentee</p>
-                    <a href="#" class="btn btn-primary">Pending Requests</a>
+                    <a href="{% url 'return_requests' %}" class="btn btn-primary">Pending Requests</a>
                     <a href="#" class="btn btn-primary">Approved Requests</a>
                     <a href="#" class="btn btn-primary">Disapproved Requests</a>
                 </div>
