--- a/BharaHobe/templates/app_rentApproval/return_product_rqsts.html
+++ b/BharaHobe/templates/app_rentApproval/return_product_rqsts.html
@@ -17,14 +17,14 @@
             </tr>
         </thead>
         <tbody>
-            <!-- {% for rqst in requests %}
+            {% for rqst in return_requests %}
             <tr>
-                <td>{{ rqst.m_renter.m_username }}</td>
-                <td>{{ rqst.m_renter.m_email }}</td>
+                <td>{{ rqst.m_rentee.m_username }}</td>
+                <td>{{ rqst.m_rentee.m_email }}</td>
                 <td>{{ rqst.m_product.m_name }}</td>
                 <td>{{ rqst.m_product.m_description }}</td>
-                <td>{{ rqst.m_product.m_rental_price }}</td>
-                <td>{{ rqst.m_product.m_quantity_available }}</td>
+                <td>{{ rqst.reason }}</td>
+               
                 <td>
                     <form action="#" method="post" style="display: inline;">
                         {% csrf_token %}
@@ -38,7 +38,7 @@
                     </form>
                 </td>
             </tr>
-            {% endfor %} -->
+            {% endfor %}
         </tbody>
     </table>
 </div>
