created log of approved and disapproved return requests

--- a/BharaHobe/templates/app_rentApproval/approved_return_rqsts.html
+++ b/BharaHobe/templates/app_rentApproval/approved_return_rqsts.html
@@ -14,15 +14,15 @@
                 <th>Approval Date & Time</th>
             </tr>
         </thead>
-        <!-- <tbody>
-            {% for request in approved_requests %}
+        <tbody>
+            {% for request in approved_rqsts %}
                 <tr>
-                    <td>{{ request.m_renter.m_username }}</td>
+                    <td>{{ request.m_rentee.m_username }}</td>
                     <td>{{ request.m_product.m_name }}</td>
                     <td>{{ request.m_approved_at }}</td>
                 </tr>
             {% endfor %}
-        </tbody> -->
+        </tbody>
     </table>
 </div>
 {% endblock %}
