--- a/BharaHobe/templates/app_rentApproval/disapproved_requests.html
+++ b/BharaHobe/templates/app_rentApproval/disapproved_requests.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div>
-    <h1 style="text-align: center;">Disapproved Requests</h1>
+    <h1 style="text-align: center;">Disapproved Add Rent Product Requests</h1>
 </div>
 <div>
     <table class="table table-bordered table-striped">
